Modificar y Eliminar (Interfaz)
Me falta agregarle eso a cerveza y a persona

--- a/ProyectoCerveza/nbproject/project.properties
+++ b/ProyectoCerveza/nbproject/project.properties
@@ -28,11 +28,13 @@ dist.jar=${dist.dir}/ProyectoCerveza.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-java-5.1.39-bin.jar=C:\\Users\\Luis Diego\\Documents\\Tec\\Bases 1\\Proyecto2\\mysql-connector-java-5.1.39\\mysql-connector-java-5.1.39-bin.jar
+file.reference.mysql-connector-java-5.1.39-bin.jar-1=C:\\Users\\Mar\u00edaLaura\\Downloads\\mysql-connector-java-5.1.39\\mysql-connector-java-5.1.39\\mysql-connector-java-5.1.39-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     <<<<<<< HEAD:\
-    ${file.reference.mysql-connector-java-5.1.39-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.39-bin.jar}:\
+    ${file.reference.mysql-connector-java-5.1.39-bin.jar-1}
     ${libs.absolutelayout.classpath}
 =======
     ${file.reference.mysql-connector-java-5.1.39-bin.jar}
