--- a/ProyectoCerveza/nbproject/project.properties
+++ b/ProyectoCerveza/nbproject/project.properties
@@ -30,13 +30,15 @@ excludes=
 file.reference.mysql-connector-java-5.1.39-bin.jar=C:\\Users\\Luis Diego\\Documents\\Tec\\Bases 1\\Proyecto2\\mysql-connector-java-5.1.39\\mysql-connector-java-5.1.39-bin.jar
 file.reference.mysql-connector-java-5.1.39-bin.jar-1=C:\\Users\\Mar\u00edaLaura\\Downloads\\mysql-connector-java-5.1.39\\mysql-connector-java-5.1.39\\mysql-connector-java-5.1.39-bin.jar
 file.reference.rs2xml.jar=C:\\Users\\Luis Diego\\Documents\\Tec\\Bases 1\\Proyecto2\\rs2xml.jar
+file.reference.rs2xml.jar-1=C:\\Users\\Mar\u00edaLaura\\Desktop\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     <<<<<<< HEAD:\
     ${file.reference.mysql-connector-java-5.1.39-bin.jar}:\
     ${file.reference.mysql-connector-java-5.1.39-bin.jar-1}:\
-    ${file.reference.rs2xml.jar}
+    ${file.reference.rs2xml.jar}:\
+    ${file.reference.rs2xml.jar-1}
     ${libs.absolutelayout.classpath}
 =======
     ${file.reference.mysql-connector-java-5.1.39-bin.jar}
