--- a/ProyectoCerveza/nbproject/project.properties
+++ b/ProyectoCerveza/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/ProyectoCerveza.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mysql-connector-java-5.1.39-bin.jar=C:\\Users\\Luis Diego\\Documents\\Tec\\Bases 1\\Proyecto2\\mysql-connector-java-5.1.39\\mysql-connector-java-5.1.39-bin.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-5.1.39-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
