--- a/ProyectoCerveza/nbproject/project.properties
+++ b/ProyectoCerveza/nbproject/project.properties
@@ -31,7 +31,8 @@ file.reference.mysql-connector-java-5.1.39-bin.jar=C:\\Users\\Luis Diego\\Docume
 includes=**
 jar.compress=false
 javac.classpath=\
-<<<<<<< HEAD
+    <<<<<<< HEAD:\
+    ${file.reference.mysql-connector-java-5.1.39-bin.jar}
     ${libs.absolutelayout.classpath}
 =======
     ${file.reference.mysql-connector-java-5.1.39-bin.jar}
